增加了一个习题

--- a/1-1.md
+++ b/1-1.md
@@ -40,4 +40,4 @@ $$
 \begin{equation}\frac{\mathrm{d}}{\mathrm{d}t}\int\psi_1^*\psi_2\mathrm{d}^3x=0\end{equation}
 $$
 
-所以我们得到结论: $\int\psi_1^\star\psi_2\mathrm{d}^3x$与时间无关.
+所以我们得到结论: $\int\psi_1^\star\psi_2\mathrm{d}^3x$与时间无关。
